# basemapped-suite

./: .gitignore  README.md
products/geolint/backend/: Dockerfile  pyproject.toml
products/geolint/backend/geolint/: __init__.py  database.py  main.py
products/geolint/backend/geolint/api/v1/: datasets.py  integrations.py  projects.py  reports.py  rules.py  teams.py  validations.py  webhooks.py
products/geolint/backend/geolint/config/: settings.py
products/geolint/backend/geolint/core/: __init__.py  engine.py  reporter.py  scoring.py
products/geolint/backend/geolint/core/ingest/: __init__.py  crs_detector.py  exceptions.py  loader.py
products/geolint/backend/geolint/core/rules/: __init__.py  attribute_rules.py  base.py  crs_rules.py  geometry_rules.py  metadata_rules.py  registry.py  topology_rules.py
products/geolint/backend/geolint/core/templates/: report.css  report.html
products/geolint/backend/geolint/models/: __init__.py
products/geolint/backend/geolint/schemas/: __init__.py
products/geolint/backend/geolint/services/: dataset_service.py  validation_service.py
products/geolint/backend/geolint/templates/: report.html
products/geolint/backend/geolint/workers/: celery_app.py  cleanup_tasks.py  events.py  validation_tasks.py  webhook_tasks.py
products/geolint/backend/tests/: test_health.py
products/geolint/backend/tests/unit/: test_attribute_rules.py  test_ingest.py  test_reporter.py  test_rules.py  test_scoring.py  test_topology_rules.py
products/geoverify/apps/api/: Dockerfile  fly.toml  pyproject.toml
products/geoverify/apps/api/geoverify_api/: __init__.py  config.py  database.py  main.py
products/geoverify/apps/api/geoverify_api/integrations/: mapdrop.py
products/geoverify/apps/api/geoverify_api/models/: __init__.py  assertion_result.py  daily_stats.py  project.py  test_run.py  user.py
products/geoverify/apps/api/geoverify_api/routers/: analytics.py  assertions.py  auth.py  projects.py  test_runs.py  webhooks.py
products/geoverify/apps/api/geoverify_api/schemas/: analytics.py  assertion.py  auth.py  project.py  test_run.py  (+1 more)
(+384 files in other folders)
