[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoverify-api"
version = "0.1.0"
description = "GeoVerify cloud dashboard API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.25",
    "redis>=5.0",
    "celery>=5.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"
